--- a/src/assets/styles/utilities.css
+++ b/src/assets/styles/utilities.css
@@ -1,20 +1,16 @@
 @layer utilities {
   .corner-only {
-    --s: 2rem;
-    /* mask:
-      conic-gradient(#000 0 0) content-box,
-      conic-gradient(at var(--s) var(--s), #0000 75%, #000 0) 0 0 / calc(100% - var(--s)) calc(100% - var(--s)); */
-
+    --s: 1.5rem;
     mask:
       conic-gradient(#000 0 0) content-box,
       conic-gradient(at var(--s) var(--s), #0000 75%, #000 0) 0 0 / calc(100% - var(--s)) calc(100% - var(--s));
+
+    @media (max-width: 48rem) {
+      --s: 1rem;
+    }
   }
 
   .noise-effect {
-    font-size: 10vw;
-    font-weight: bold;
-    text-align: center;
-    font-family: 'Montserrat';
     color: transparent;
     background:
       repeating-radial-gradient(rgba(0, 0, 0, 0.25) 0 0.0001%, var(--green-300) 0 0.0002%) 30% 10% / 40vw 40vw,
@@ -22,6 +18,5 @@
     background-clip: text;
     -webkit-background-clip: text;
     background-blend-mode: difference;
-    margin: 90px 0px;
   }
 }
