fix: revert colors to hex

--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -68,88 +68,88 @@
   --nanocentury: 3.156s;
   --scaramucci: calc(var(--day) * 11);
 
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
-  --surface: oklch(0.0837 0.0118 255.89);
+  --background: #ffffff;
+  --foreground: #1f1f1f;
+  --surface: #0a0d14;
   --surface1: #05080f;
   --surface2: #090c15;
-  --card: oklch(1 0 0);
+  --card: #ffffff;
 
-  --card-foreground: oklch(0.145 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
-  --input: oklch(0.922 0 0);
-  --ring: oklch(0.708 0 0);
+  --card-foreground: #1f1f1f;
+  --popover: #ffffff;
+  --popover-foreground: #1f1f1f;
+  --primary: #2d2d2d;
+  --primary-foreground: #fbfbfb;
+  --secondary: #f7f7f7;
+  --secondary-foreground: #2d2d2d;
+  --muted: #f7f7f7;
+  --muted-foreground: #757575;
+  --accent: #f7f7f7;
+  --accent-foreground: #2d2d2d;
+  --destructive: #dc4446;
+  --border: #e8e8e8;
+  --input: #e8e8e8;
+  --ring: #a3a3a3;
 
-  --teal-400: oklch(81% 0.12 192);
-  --teal-500: oklch(72% 0.13 191);
-  --teal-600: oklch(56% 0.1 193);
+  --teal-400: #5dd4d4;
+  --teal-500: #3dbdbe;
+  --teal-600: #228b8d;
 
-  --green-50: oklch(98% 0.04 164);
-  --green-100: oklch(97% 0.08 162);
-  --green-200: oklch(93% 0.13 163);
-  --green-300: oklch(88% 0.17 161);
-  --green-400: oklch(82% 0.18 158);
-  --green-500: oklch(73% 0.19 158);
-  --green-600: oklch(62% 0.16 159);
-  --green-700: oklch(52% 0.13 160);
-  --green-800: oklch(42% 0.1 161);
-  --green-900: oklch(37% 0.09 162);
+  --green-50: #f2fef7;
+  --green-100: #e3fdef;
+  --green-200: #c4f9dd;
+  --green-300: #9ff3c7;
+  --green-400: #6eebad;
+  --green-500: #3ed995;
+  --green-600: #22b478;
+  --green-700: #1a8f61;
+  --green-800: #17704d;
+  --green-900: #155d43;
 
-  --gray-50: oklch(92% 0.01 249);
-  --gray-100: oklch(92% 0.01 249);
-  --gray-200: oklch(92% 0.01 249);
-  --gray-300: oklch(85% 0.02 249);
-  --gray-400: oklch(70% 0.02 249);
-  --gray-500: oklch(56% 0.03 249);
-  --gray-600: oklch(43% 0.03 249);
-  --gray-700: oklch(33% 0.03 249);
-  --gray-800: oklch(24% 0.02 249);
-  --gray-900: oklch(16% 0.03 249);
+  --gray-50: #e3e4e5;
+  --gray-100: #e3e4e5;
+  --gray-200: #e3e4e5;
+  --gray-300: #c9cbcd;
+  --gray-400: #9ea1a4;
+  --gray-500: #77797d;
+  --gray-600: #545659;
+  --gray-700: #3e4043;
+  --gray-800: #2d2f31;
+  --gray-900: #1d1f21;
 
-  --tints-green: oklch(15% 0.03 227);
-  --tints-blue: oklch(11% 0.03 274);
-  --tints-magenta: oklch(11% 0.03 321);
+  --tints-green: #181d24;
+  --tints-blue: #13151c;
+  --tints-magenta: #1a1319;
 
-  --blue-50: oklch(95% 0.03 275);
-  --blue-100: oklch(91% 0.06 275);
-  --blue-200: oklch(82% 0.12 275);
-  --blue-300: oklch(71% 0.14 274);
-  --blue-400: oklch(61% 0.15 274);
-  --blue-500: oklch(53% 0.17 274);
-  --blue-600: oklch(47% 0.17 274);
-  --blue-700: oklch(42% 0.16 274);
-  --blue-800: oklch(39% 0.16 274);
-  --blue-900: oklch(35% 0.15 274);
+  --blue-50: #e9eef6;
+  --blue-100: #d4ddef;
+  --blue-200: #a9bbdf;
+  --blue-300: #7d99ce;
+  --blue-400: #5277bd;
+  --blue-500: #2755ac;
+  --blue-600: #1c3e96;
+  --blue-700: #162f7f;
+  --blue-800: #11266b;
+  --blue-900: #0d1e57;
 
-  --magenta-50: oklch(95% 0.06 340);
-  --magenta-100: oklch(90% 0.12 340);
-  --magenta-200: oklch(82% 0.19 340);
-  --magenta-300: oklch(74% 0.24 340);
-  --magenta-400: oklch(66% 0.27 340);
-  --magenta-500: oklch(60% 0.29 340);
-  --magenta-600: oklch(53% 0.25 340);
-  --magenta-700: oklch(47% 0.22 340);
-  --magenta-800: oklch(41% 0.19 340);
-  --magenta-900: oklch(33% 0.16 340);
+  --magenta-50: #f8e8f4;
+  --magenta-100: #f1d0e9;
+  --magenta-200: #e3a1d3;
+  --magenta-300: #d572bd;
+  --magenta-400: #c743a7;
+  --magenta-500: #b91491;
+  --magenta-600: #990f7b;
+  --magenta-700: #7a0c65;
+  --magenta-800: #5b094f;
+  --magenta-900: #3c0639;
 
-  --indigo-400: oklch(68% 0.19 283);
-  --indigo-500: oklch(58% 0.22 283);
-  --indigo-600: oklch(51% 0.21 283);
+  --indigo-400: #7b85e7;
+  --indigo-500: #5461de;
+  --indigo-600: #3c47c9;
 
-  --orange-400: oklch(80% 0.14 63);
-  --orange-500: oklch(72% 0.17 50);
-  --orange-600: oklch(60% 0.15 50);
+  --orange-400: #ffc970;
+  --orange-500: #ffaa43;
+  --orange-600: #d88621;
 
   --brand: var(--color-green-500);
 
