feat: input text component

--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -153,6 +153,10 @@
 
   --brand: #00c871ff;
   --brand-rgb: 0, 200, 130;
+  --dark-card: #090c15;
+  --neutral-low: #64748b3d;
+  --neutral-low-rgb: 100, 116, 139;
+
   /* base is 9px */
   --radius: 0.5625rem;
 }
