fix: ugly default html number selector

--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -160,3 +160,11 @@
   /* base is 9px */
   --radius: 0.5625rem;
 }
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
