--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -14,3 +14,15 @@
     @apply bg-background text-foreground;
   }
 }
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+
+button {
+  cursor: pointer;
+}
