ui-fix: epoch viewer shadow and scroll + fixed height

--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -36,3 +36,11 @@ button {
     #00000000 100%
   );
 }
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
